# databricks-bundle-implementation

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-databricks.yml  ci-local.yml  ci.yml  deploy-test.yml  release.yml  unit_test_databricks_connect.yml  unit_tests.yml  validate-bundle.yml
dab_project/tasks/: __init__.py  base_task.py  bronze_accuweather.py  bronze_nyctaxi.py  silver_nyctaxi_aggregated.py
dbt/: dbt_project.yml
dbt/macros/: generate_schema_name.sql
dbt/models/mart/: schema.yml
dbx_example/: __init__.py  __main__.py  catalog.py  cli.py  databricks.py  delta.py  etl_task.py  spark.py
dbx_example/tasks/: __init__.py  base_task.py  bronze_accuweather.py  bronze_nyctaxi.py  silver_nyctaxi_aggregated.py
notebooks/: README.md  notebook_example.ipynb  silver_nyctaxi_aggregate.py
resources/: __init__.py  constants.py  dbx_example.job.yml  dbx_example_job.yml  py_dbx_example_job.py  schemas.yml  volumes.yml  workflow_dbt_job.yml  workflow_dbx_python_job.py  workflow_dbx_yaml_job.yml  workflow_python_job.py
scratch/: README.md
scripts/: setup_workspace.py
src/dab_project/: __main__.py  cli.py  databricks.py  delta.py
tests/: conftest.py  notebook_run_pytest.py  test_base_task.py  test_delta.py  test_etl_task.py  test_spark.py
typings/: __builtins__.pyi
