[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "dab_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Fritz", email = "flo.fritz@protonmail.com" }
]
requires-python = ">=3.12"
urls.homepage = "https://github.com/frizzleqq/databricks-bundle-implementation"

# Roughly based on Databricks runtime 16.3: https://docs.databricks.com/aws/en/release-notes/serverless/#version-163
# Note that we do not include pre-installed libraries like "pydantic" in the runtime-dependencies here
dependencies = [
    "databricks-sdk>=0.41, <0.48.0", # pinning from dbt-databricks
]

[project.optional-dependencies]
dev = [
    # Databricks Runtime (connect includes delta/pyspark)
    "databricks-connect~=16.3.0",
    "pydantic==2.8.2",
    # dbt
    "dbt-databricks~=1.10.0",
    # Tooling
    "databricks-bundles~=0.260.0", # For Python-based Workflows
    "mypy", # Type hints
    "pip", # Databricks extension needs it
    "pytest", # Unit testing
    "ruff", # Linting/Formatting
]
# Is this really needed?
dev_local = [
    # Databricks Runtime (connect includes delta/pyspark)
    "delta-spark>=3.3.0, <4.0.0",
    "pydantic==2.8.2",
    "pyspark>=3.5.0, <4.0.0",
    # dbt
    "dbt-databricks~=1.10.0",
    # Tooling
    "databricks-bundles~=0.260.0", # For Python-based Workflows
    "mypy", # Type hints
    "pip", # Databricks extension needs it
    "pytest", # Unit testing
    "ruff", # Linting/Formatting
]

[project.scripts]
dab-project = "dab_project.cli:main"

[tool.uv.build-backend]
module-name = "dab_project"
module-root = ""

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
include = [
    "pyproject.toml",
    "dab_project/**/*.py",
    "resources/**/*.py",
    "scripts/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = ["scratch/**/*.py"]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "I", # isort
]
ignore = [
  "E501", # Line length is regulated by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.black]
# This is only for Notebooks within Databricks Workspace and not used in Python project.
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
