[build-system]
requires = ["uv_build>=0.8.0,<0.10"]
build-backend = "uv_build"

[project]
name = "dab_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Fritz", email = "flo.fritz@protonmail.com" }
]
requires-python = ">=3.12"
urls.homepage = "https://github.com/frizzleqq/databricks-bundle-implementation"

# Based on serverless environment 4: https://docs.databricks.com/aws/en/release-notes/serverless/environment-version/four
# Note that we do not include pre-installed libraries like "pydantic" in the runtime-dependencies in main dependencies
dependencies = [
    "databricks-sdk>=0.41, <0.68.0", # pinning from dbt-databricks
]

[project.optional-dependencies]
# Databricks runtime dependencies (preinstalled on cluster)
databricks = [
    "delta-spark==4.0.*",
    "pydantic==2.10.6",
    "pyspark==4.0.*",
]
# dbt dependencies
dbt = [
    "dbt-databricks==1.11.*",
]
# Development & Testing
dev = [
    "databricks-bundles==0.280.*", # For Python-based Workflows
    "mypy", # Type hints
    "pip", # Databricks extension needs it
    "pytest", # Unit testing
    "ruff", # Linting/Formatting
]

[project.scripts]
dab-project = "dab_project.cli:main"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
include = [
    "pyproject.toml",
    "src/**/*.py",
    "resources/**/*.py",
    "scripts/**/*.py",
    "tests/**/*.py",
]
exclude = [
    "tests/notebook_run_pytest.py"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = [
    "scratch/**/*.py",
    "tests/notebook_run_pytest.py"
]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "I", # isort
]
ignore = [
  "E501", # Line length is regulated by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.black]
# This is only for Notebooks within Databricks Workspace and not used in Python project.
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-ra -q"
testpaths = [
    "tests",
]
